
MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = html css im demos presentations

docdir   =	$(datadir)/ofeli/doc

dist_doc_DATA =	COPYING \
		citing.html \
		copyright.html \
		download.html \
		extlib.html \
		fformats.html \
		index.html \
		presentations.html \
		demos.html \
		logo.png \
		news.html \
		ofeli.pdf \
		refguide.pdf \
		userguide.pdf \
		overview.html \
		doxygen.css \
		tabs.css \
		head.css

doc_DATA =	COPYING \
		citing.html \
		copyright.html \
		download.html \
		extlib.html \
		fformats.html \
		index.html \
		presentations.html \
		demos.html \
		logo.png \
		news.html \
		ofeli.pdf \
		refguide.pdf \
		overview.html \
		doxygen.css \
		tabs.css \
		head.css
