## Process this file with automake to produce Makefile.in

matdir   =	$(datadir)/ofeli/material
mat_DATA =	README \
		Air.md \
		Aluminium.md \
		Concrete.md \
		Copper.md \
		Generic.md \
		Iron.md \
		Rubber.md \
		Silver.md \
		StainlessSteel.md \
		Water.md
dist_mat_DATA =	README \
		Air.md \
		Aluminium.md \
		Concrete.md \
		Copper.md \
		Generic.md \
		Iron.md \
		Rubber.md \
		Silver.md \
		StainlessSteel.md \
		Water.md
